@@ -3,10 +3,10 @@ package progExs.hierarquia;
 public class Exercicio2 {
 
     public static void main(String[] args) {
-        Integer intObj = new Integer(123);
-        Long longObj = new Long(1234567890);
-        Double doubleObj = new Double(12.345);
-        Boolean boolObj = new Boolean(true);
+        Integer intObj = Integer.valueOf(123);
+        Long longObj = Long.valueOf(1234567890);
+        Double doubleObj = Double.valueOf(12.345);
+        Boolean boolObj = Boolean.valueOf(true);
         Object[] objArray = {intObj,longObj,doubleObj,boolObj};
 
         for(int i=0;i<objArray.length;i++) {
